<resources>
    <string name="app_name">DateCalc</string>
    <string name="title">GG Date Calculator</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="difference">Difference</string>
    <string name="same_dates">Same dates</string>
    <string name="new_date">New date</string>

    <string name="add">Add</string>

    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="subtract">Subtract</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>