<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DifferenceBetweenDatesFragment">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/primary_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_date"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/accent"
            android:backgroundTint="@color/accent"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">


        <RadioGroup
            android:id="@+id/rg_operators"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/r_btn_add"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:checked="true"
                android:text="@string/add"
                android:textSize="20sp"
                android:buttonTint="@color/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <RadioButton
                android:id="@+id/r_btn_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:checked="false"
                android:text="@string/subtract"
                android:textSize="20sp"
                android:buttonTint="@color/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/r_btn_add"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24sp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_radios">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/years"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_years"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="60dp"
                android:elevation="24dp"
                android:padding="8dp"
                android:textAlignment="textStart"
                android:backgroundTint="@color/accent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/months"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_months"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="60dp"
                android:elevation="24dp"
                android:padding="8dp"
                android:textAlignment="textStart"
                android:backgroundTint="@color/accent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_days"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="60dp"
                android:elevation="24dp"
                android:padding="8dp"
                android:textAlignment="textStart"
                android:backgroundTint="@color/accent"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_spinners">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_new_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>